test/cases/compile_errors/array_init_not_supported_on_result_type.zig
fn dummy(_: u32) void {}

export fn foo() void {
    dummy(.{ 1, 2 });
}

// error
// backend=stage2
// target=native
//
// :4:12: error: type 'u32' does not support array initialization syntax
